git single config init